force-app/main/default/objects/State_Save_State__c/State_Save_State__c.object-meta.xml
<CustomObject>
    <label>State Save State</label>
    <pluralLabel>State Save States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>State Save State Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>