force-app/main/default/objects/State_Save_State__c/fields/Crisis__c.field-meta.xml
<CustomField>
    <fullName>Crisis__c</fullName>
    <label>Crisis</label>
    <type>Text</type>
    <length>255</length>
</CustomField>