force-app/main/default/objects/State_Save_State__c/fields/Flashpoint__c.field-meta.xml
<CustomField>
    <fullName>Flashpoint__c</fullName>
    <label>Flashpoint</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>