force-app/main/default/objects/State_Save_State__c/fields/Is_colonial__c.field-meta.xml
<CustomField>
    <fullName>Is_colonial__c</fullName>
    <label>Is colonial</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>