force-app/main/default/objects/State_Save_State__c/fields/Is_slave__c.field-meta.xml
<CustomField>
    <fullName>Is_slave__c</fullName>
    <label>Is slave</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>