force-app/main/default/objects/State_Save_State__c/fields/Popproject__c.field-meta.xml
<CustomField>
    <fullName>Popproject__c</fullName>
    <label>Popproject</label>
    <type>Lookup</type>
    <referenceTo>Popproject__c</referenceTo>
    <relationshipName>State_Save_State_Popproject</relationshipName>
</CustomField>