force-app/main/default/objects/State_Save_State__c/fields/Provinces__c.field-meta.xml
<CustomField>
    <fullName>Provinces__c</fullName>
    <label>Provinces</label>
    <type>Lookup</type>
    <referenceTo>Province__c</referenceTo>
    <relationshipName>State_Save_State_Provinces</relationshipName>
</CustomField>