force-app/main/default/objects/State_Save_State__c/fields/Savings__c.field-meta.xml
<CustomField>
    <fullName>Savings__c</fullName>
    <label>Savings</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>5</scale>
</CustomField>