force-app/main/default/objects/State_Save_State__c/fields/State_buildings__c.field-meta.xml
<CustomField>
    <fullName>State_buildings__c</fullName>
    <label>State buildings</label>
    <type>Lookup</type>
    <referenceTo>State_buildings__c</referenceTo>
    <relationshipName>State_Save_State_State_buildings</relationshipName>
</CustomField>